<resources>
    <string name="app_name">QuizAppVi</string>
    <string name="quiz">quiz</string>
    <string name="todo">todo</string>
    <string name="category">category</string>
    <string name="difficulty">difficulty</string>
    <string name="start">start</string>
    <string name="heartlist">HeartList</string>

    <string name="homefragment">HomeFragment</string>
    <string name="difficultyy">dif</string>
    <string name="questions_a">questions_a</string>
    <string name="correct_answers">Correct answers:</string>
    <string name="Correct_answers" />
    <string name="_8_10">8/10</string>
    <string name="mixed">Mixed</string>
    <string name="geography">Geography</string>
    <string name="kandy">Kandy</string>
    <string name="negombo">Negombo</string>
    <string name="moratuwa">Moratuwa</string>
    <string name="colombo">Colombo</string>
    <string name="_0_0">0/0</string>
    <string name="black">Black</string>

</resources>