<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.quizappvi.ui.fragments.MainFragment">




    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_ar_tut"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"

        android:contentDescription="@string/todo">

    </ImageView>


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="false"
     android:text="Questions amount:"
      android:layout_marginTop="180dp"
           android:layout_marginStart="100dp"
      android:textColor="#BDB8B8"

      />


    <TextView

        android:id="@+id/changetextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
       android:layout_marginLeft="225dp"
        android:text="5"



        android:textColor="@color/black"
        android:textStyle="italic"
              android:layout_marginTop="180dp"
        android:textAllCaps="true"
        />







      <SeekBar
        android:id="@+id/seekBar"
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="90dp"
          android:layout_marginTop="205dp"
        android:max="20"
        android:progress="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:progressTint="@color/purple"
     android:thumb="@drawable/seekbar_thumb"

       />


    <!--

    <com.warkiz.widget.IndicatorSeekBar

        android:id="@+id/progress_bar"
        android:layout_width="250dp"
        android:layout_height="10dp"



        android:layout_marginStart="90dp"
        android:layout_marginTop="205dp"
        app:isb_max="100"
        app:isb_min="-1.0"
        app:isb_progress="25"
        app:isb_seek_smoothly="false"
        app:isb_ticks_count="1"

        app:isb_tick_marks_size="13dp"



        app:isb_indicator_color="#00BCD4"
        app:isb_indicator_text_color="@color/purple"
        app:isb_indicator_text_size="18sp"
        app:isb_track_background_color="#8F2EA3"
app:isb_thumb_color="@color/purple"




        app:isb_track_background_size="2dp"
        app:isb_track_progress_color="#F4F1E9"
        app:isb_track_progress_size="4dp"
        app:isb_only_thumb_draggable="false"


        />- -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="70dp"
        android:layout_marginTop="290dp"


        />


    <org.angmarch.views.NiceSpinner
        android:id="@+id/category_spinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="330dp"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        app:popupTextAlignment="start"


         />





    <Spinner
        android:id="@+id/difficult_spinner"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="430dp"
        android:entries="@array/difficult"
        android:spinnerMode="dropdown"
        android:layout_centerHorizontal="true"

        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"



        android:layout_centerHorizontal="false"
        android:layout_marginStart="70dp"
        android:layout_marginTop="390dp"


        />










    <Button
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:text="@string/start"

        android:textAllCaps="true"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonbackground"
            android:id="@+id/Bstart"

        />






    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"

        app:lottie_rawRes="@raw/quizzlot"

        android:visibility="gone"
        />




</RelativeLayout>