<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/quzz"
    android:text="quizList"
android:textAlignment="center"
   android:layout_marginLeft="150dp"


    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/booleanContainer"

        >
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background1"
            android:id="@+id/trueOrfalse1"
            android:layout_marginStart="68dp"
            android:layout_marginTop="220dp"

            />

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background1"
            android:id="@+id/trueOrfalse2"
            android:layout_marginStart="68dp"

            />


    </LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/multiplyContainer"
        >


        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"

            android:textColor="@color/blue"
            android:background="@drawable/background1"
            android:text="Kandy"
            android:id="@+id/btn1"
         android:textAlignment="center"

          />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:background="@drawable/background1"

            android:text="@string/moratuwa"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:id="@+id/btn2"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"

            android:background="@drawable/background1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/negombo"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:id="@+id/btn3"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:background="@drawable/background1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:text="@string/kandy"
            android:id="@+id/btn4"
            />


    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>